--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,11 @@ button:hover {
     background-color: #0056b3;
 }
 
-#resultatsPersonalitzat {
+#resultatsPersonalitzat, #resultatsConsumElectric, #resultatsConsumAigua, #resultatsConsumOficina, #resultatsConsumNeteja {
+    margin-top: 20px;
+}
+
+canvas {
     margin-top: 20px;
 }
 
@@ -55,7 +59,6 @@ button:hover {
     border-radius: 5px;
 }
 
-/* Estils per a les pestanyes */
 .tabs {
     overflow: hidden;
     border-bottom: 1px solid #ccc;
@@ -63,7 +66,7 @@ button:hover {
 }
 
 .tab-button {
-    background-color: #A3BFFA; /* Blau suau quan no està seleccionat */
+    background-color: #A3BFFA;
     float: left;
     border: none;
     outline: none;
@@ -73,7 +76,7 @@ button:hover {
 }
 
 .tab-button:hover {
-    background-color: #7289DA; /* Blau una mica més fosc al hover */
+    background-color: #7289DA;
 }
 
 .tab-button.active {
@@ -89,13 +92,12 @@ button:hover {
     display: block;
 }
 
-/* Estils per als desplegables */
 .collapsible {
     margin: 10px 0;
 }
 
 .collapsible-btn {
-    background-color: #A3BFFA; /* Blau suau quan no està seleccionat */
+    background-color: #A3BFFA;
     width: 100%;
     text-align: left;
     padding: 10px;
@@ -104,7 +106,7 @@ button:hover {
 }
 
 .collapsible-btn:hover {
-    background-color: #7289DA; /* Blau més fosc al hover */
+    background-color: #7289DA;
 }
 
 .collapsible-content {
